	(sp_style_read_inherited_paint): Renamed, parse "inherit" value
	(sp_style_write_inherited_paint): Ditto, write it
	(sp_style_merge_inherited_paint): Do hunref here
	(sp_style_set_fill_color_rgba): Do hunref instead of gtk_object_unref, new structure
	(sp_style_set_fill_color_cmyka): Ditto
	(sp_style_set_stroke_color_rgba): Ditto
	(sp_style_set_stroke_color_cmyka): Ditto

	* src/style.h: Created new 30-bit scaled value type, used for opacity
	Renamed SPPaint to SPInheritedPaint

Sat Jul 13 19:47:16 2002 Davide Puricelli <evo@debian.org>
	
	* po/ja.po: Updated, thanks Junichi Uekawa <dancer@netfort.gr.jp>

Sat Jul 13 05:52:15 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-item-group.c (sp_group_bbox): Fixed group selection bug -
	thanks to Ted Gould and his bug report.

2002-05-20  Lauris Kaplinski  <lauris@ximian.com>

	* src/xml/repr-io.c (sp_repr_svg_read_node): Add namespaces back -
	thanks to Pawel

	* src/dialogs/xml-tree.c: Complete refactoring by Pawel Palucha

	* src/document.c (sp_document_lookup_id): Check values

2002-04-21  Masatake YAMATO  <jet@gyve.org>

        * src/toolbox.c (sp_maintoolbox_open_files): Use 
        gnome_uri_list_extract_filenames.

        * src/interface.c (sp_ui_import_files): Ditto.

2002-04-19  Lauris Kaplinski  <lauris@ximian.com>

	* src/text-context.c (sp_text_context_root_handler): Port to new
	text object (incomplete)
	(sp_text_context_selection_changed): Ditto

	* src/sp-text.c: Lot of new stuff, shows something on screen at last

	* src/sp-object.c (sp_object_modified): Do not allow reentrancy
	- think SPText will like it

	* src/sp-item.c: Removed sp_item_update and virtual method

	* src/sp-item-group.c: Removed ::update method

2002-04-17  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-rect.c (sp_rect_rx_set): Make argument const, kill warning
	(sp_rect_ry_set): Ditto

2002-04-12  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-text.h: Broke into SPText, SPTSpan and SPString objects
