@@ -233,7 +233,7 @@ sp_shape_print (SPItem * item, GnomePrintContext * gpc)
 					gnome_print_gsave (gpc);
 					gnome_print_setrgbcolor (gpc, rgb[0], rgb[1], rgb[2]);
 					gnome_print_setopacity (gpc, opacity);
-					if (object->style->fill_rule == ART_WIND_RULE_ODDEVEN) {
+					if (object->style->fill_rule.value == ART_WIND_RULE_ODDEVEN) {
 						gnome_print_eofill (gpc);
 					} else {
 						gnome_print_fill (gpc);
@@ -262,7 +262,7 @@ sp_shape_print (SPItem * item, GnomePrintContext * gpc)
 						art_affine_invert (d2i, i2d);
 
 						gnome_print_gsave (gpc);
-						if (object->style->fill_rule == ART_WIND_RULE_ODDEVEN) {
+						if (object->style->fill_rule.value == ART_WIND_RULE_ODDEVEN) {
 							gnome_print_eoclip (gpc);
 						} else {
 							gnome_print_clip (gpc);
@@ -296,8 +296,8 @@ sp_shape_print (SPItem * item, GnomePrintContext * gpc)
 				gnome_print_setrgbcolor (gpc, rgb[0], rgb[1], rgb[2]);
 				gnome_print_setopacity (gpc, opacity);
 				gnome_print_setlinewidth (gpc, object->style->user_stroke_width);
-				gnome_print_setlinejoin (gpc, object->style->stroke_linejoin);
-				gnome_print_setlinecap (gpc, object->style->stroke_linecap);
+				gnome_print_setlinejoin (gpc, object->style->stroke_linejoin.value);
+				gnome_print_setlinecap (gpc, object->style->stroke_linecap.value);
 				gnome_print_stroke (gpc);
 				gnome_print_grestore (gpc);
 			}
